# vizgrams

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.batch  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose.auth.yml  docker-compose.clickhouse.yml  docker-compose.dex.prod.yml  docker-compose.dex.yml  docker-compose.jaeger.yml  docker-compose.yml  pyproject.toml  ruff.toml  start_api_server.sh  start_batch_service.sh  start_ui_server.sh
.github/: CODEOWNERS
api/: batch_client.py  dependencies.py  limiter.py  main.py  version_routes.py
batch/: executor.py  lock.py  logging_config.py  schedule.py  tracing.py
batch_service/: config.py  db.py  executor.py  main.py  runner.py  scheduler.py
core/: batch_db.py  caption_provider.py  chat_history_db.py  db.py  metadata_db.py  model_config.py  notifications_db.py  proposals_db.py  ranking.py  rbac.py  registry.py  retry.py  service_accounts.py  significance.py  tool_service.py  types.py  validation.py  version_routes.py  vizgrams_db.py
data/: api.db  batch.db  vizgrams.db
dev/: docker-compose.auth.local.yml
docs/: expression.md  vizgrams-backlog.md  vizgrams-spec.md
engine/: expression_compiler.py  extractor.py  filter_compiler.py  function_registry.py  mapper.py  python_evaluator.py  query_runner.py  schema.py
evals/: __init__.py  case.py  judge.py  report.py  run.py  runner.py
models/: registry.yaml
schemas/: application.yaml  extractor.yaml  feature.yaml  mapper.yaml  ontology.yaml  pivot.yaml  query.yaml  scan.yaml  view.yaml
scripts/: configure_default_model.py
semantic/: application.py  expression.py  feature.py  mapper.py  mapper_types.py  materialize.py  ontology.py  owl_generator.py  query.py  transforms.py  types.py  view.py  yaml_adapter.py
tests/: __init__.py  conftest.py  test_activity_aggregator.py  test_api_batch.py  test_api_certification.py  test_api_chat.py  test_api_chat_publish.py  test_api_chat_sessions.py  test_api_dependencies.py  test_api_entities.py  test_api_explore_chat.py  test_api_extractors.py  test_api_features.py  test_api_http.py  test_api_integration.py  test_api_jobs.py  test_api_mappers.py  test_api_me.py  test_api_models.py  test_api_ownership.py  test_api_queries.py  test_api_service_accounts.py  test_batch_executor.py  test_batch_lock.py  test_batch_logging_config.py  test_batch_runner.py  test_batch_schedule.py  test_batch_scheduler.py  test_caption_provider.py  test_charts_router.py  (+52 more)
(+294 files in other folders)
